--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Pascal Whiteboard (MVP)</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <header>
     <button id="menu-toggle">☰ メニュー</button>
     <h1>Pascal Whiteboard (MVP)</h1>
+
     <div id="version">v0.3.0</div>
-    <input type="file" id="file-input" accept="application/pdf">
+
+    <!-- 拡大縮小UI -->
+    <button id="zoom-out" title="縮小">－</button>
+    <span id="zoom-display" aria-live="polite">100%</span>
+    <button id="zoom-in" title="拡大">＋</button>
+
+    <!-- PDF選択＆インストール -->
+    <input type="file" id="file-input" accept="application/pdf" />
     <button id="install">インストール</button>
   </header>
 
@@ -19,21 +28,22 @@
     <canvas id="draw-layer"></canvas>
   </main>
 
+  <!-- 左メニュー（開閉式） -->
   <aside id="sidebar">
     <h2>ツール</h2>
     <button id="pen">ペン</button>
     <button id="eraser">消しゴム</button>
     <button id="clear">全消し</button>
-    <label>色 <input type="color" id="color-picker" value="#000000"></label>
-    <label>太さ <input type="range" id="size-picker" min="1" max="10" value="2"></label>
+    <label>色 <input type="color" id="color-picker" value="#000000" /></label>
+    <label>太さ <input type="range" id="size-picker" min="1" max="16" value="3" /></label>
     <button id="export">PNG書き出し</button>
   </aside>
 
-  <!-- PDF.js 本体 -->
+  <!-- PDF.js 本体とワーカー（CDN） -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <!-- PDF.js worker を追加 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js"></script>
-  <!-- 自作スクリプト -->
+
+  <!-- アプリ本体 -->
   <script src="main.js"></script>
 </body>
 </html>
