--- a/index.html
+++ b/index.html
@@ -1,49 +1,40 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Pascal Whiteboard (MVP)</title>
-  <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <button id="menu-toggle">☰ メニュー</button>
     <h1>Pascal Whiteboard (MVP)</h1>
-
     <div id="version">v0.3.0</div>
-
-    <!-- 拡大縮小UI -->
-    <button id="zoom-out" title="縮小">－</button>
-    <span id="zoom-display" aria-live="polite">100%</span>
-    <button id="zoom-in" title="拡大">＋</button>
-
-    <!-- PDF選択＆インストール -->
-    <input type="file" id="file-input" accept="application/pdf" />
+    <input type="file" id="file-input" accept="application/pdf">
     <button id="install">インストール</button>
   </header>
+
+  <!-- 左端の“つまみ” -->
+  <button id="edge-toggle" class="edge-handle" aria-label="メニュー開閉">◀</button>
 
   <main>
     <div id="pdf-container"></div>
     <canvas id="draw-layer"></canvas>
   </main>
 
-  <!-- 左メニュー（開閉式） -->
   <aside id="sidebar">
     <h2>ツール</h2>
     <button id="pen">ペン</button>
     <button id="eraser">消しゴム</button>
     <button id="clear">全消し</button>
-    <label>色 <input type="color" id="color-picker" value="#000000" /></label>
-    <label>太さ <input type="range" id="size-picker" min="1" max="16" value="3" /></label>
+    <label>色 <input type="color" id="color-picker" value="#000000"></label>
+    <label>太さ <input type="range" id="size-picker" min="1" max="10" value="2"></label>
     <button id="export">PNG書き出し</button>
   </aside>
 
-  <!-- PDF.js 本体とワーカー（CDN） -->
+  <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js"></script>
-
-  <!-- アプリ本体 -->
+  <!-- メインスクリプト -->
   <script src="main.js"></script>
 </body>
 </html>
